--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="./img/logo/navLogo.png" alt="AISKCON-Construction" />
       </div>
       <ul class="list1">
-        <li id="home"><a href="./">Home</a></li>
+        <li id="home"><a href="./">home</a></li>
         <li id="services">
           <div>
             <pre><a href="./ServiceSection">Services</a> <i class="fas fa-chevron-circle-down"></i></pre>
